--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <nav class="navbar">
                 <a href="#" style="--i:1;"  class="active">Home</a>
-                <a href="#" style="--i:2;">About</a>
+                <a href="https://github.com/atul120212" style="--i:2;">GitHub</a>
                 <a href="#" style="--i:3;">Skills</a>
                 <a href="#" style="--i:4;">Portfolio</a>
                 <a href="#" style="--i:5;">Contact</a>
@@ -30,17 +30,17 @@
                 <h3>And I'm a <span class="multiple-text"></span></h3>
                 <p>jsjsk ajsjkhd kajshdjkh jkshdkjh kashdkjhskj jskhdkjhsa</p>
                 <div class="social-media">
-                    <a href="#" style="--i:7;"><i class="bx bxl-linkedin-square"></i></a>
-                    <a href="#" style="--i:8;"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" style="--i:9;"><i class="bx bxl-instagram-alt"></i></a>
-                    <a href="#" style="--i:10;"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/atul-sharma-11735b1b3/" target="_blank" style="--i:7;"><i class="bx bxl-linkedin-square"></i></a>
+                    <a href="https://twitter.com/Atulsharma2002" style="--i:8;" target="_blank"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.instagram.com/invincible_atul/" style="--i:9;" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
+                    <a href="https://www.cloudskillsboost.google/public_profiles/5421cd40-090d-4b03-80cd-b3eafc66af30" target="_blank" style="--i:10;"><i class="bx bxl-google-cloud"></i></a>
                 </div>
-                <a href="#" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1gB5924h93tjzYsBedve_J9Ej76XrbJE0/view?usp=share_link" class="btn" target="_blank">Download CV</a>
             </div>
             <div class="home-img">
                 <img src="atul.png" alt="Atul Sharma">
             </div>
-            
+
         </section>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
