--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            .a .cc{
+              color: #fff;
+            }
+          </style>
         <title>Atul's Portfolio</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +33,7 @@
                 <h3>Hello, It's Me</h3>
                 <h1>Atul Sharma</h1>
                 <h3>And I'm a <span class="multiple-text"></span></h3>
-                <p>jsjsk ajsjkhd kajshdjkh jkshdkjh kashdkjhskj jskhdkjhsa</p>
+                <p>I am a student of B.Tech 3nd year with CSE(AI&ML) branch and also founder of CoderCorps community. <br>I am also a core team member of CodeInCampus community and CodeIn  community. And also a Compus ambassador of GeeksforGeeks. I participated in Google Cloud ready facilitator program and completed 3 milestones. And I got some goodies and virtual badges from Google Cloud.  </p>
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/atul-sharma-11735b1b3/" target="_blank" style="--i:7;"><i class="bx bxl-linkedin-square"></i></a>
                     <a href="https://twitter.com/Atulsharma2002" style="--i:8;" target="_blank"><i class="bx bxl-twitter"></i></a>
